--- a/src/pages/Proyectos.astro
+++ b/src/pages/Proyectos.astro
@@ -9,7 +9,7 @@ import CodeIcon from "@/components/icons/Code"
 
  
     <Layout title="Proyectos" description="Esta página contiene todos los proyectos">
-      <SectionContainer className="mt-8 pt-8" >
+      <SectionContainer className="mt-8 pt-8 p-3" >
         <TitleSection>
           <CodeIcon class="size-7" />
           Proyectos
