--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import ButtonLink from "@/components/ButtonLink.astro"
           <CodeIcon class="size-7" />
           Proyectos
         </TitleSection>
-        <ButtonLink href="/Proyectos">Ver mas</ButtonLink>
+        <ButtonLink href="/Proyectos">{"Ver mas >"}</ButtonLink>
       </div>
       
       <Projects />
