--- a/src/pages/Proyectos.astro
+++ b/src/pages/Proyectos.astro
@@ -15,7 +15,7 @@ import CodeIcon from "@/components/icons/Code"
           Proyectos
         </TitleSection>
         <ListProyects client:load/>
-      <SectionContainer/>
+      </SectionContainer>
     </Layout>
   
 
